--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,16 @@
     }
   ],
   "require": {
-    "illuminate/http": "~5.0|~6.0|~7.0",
-    "illuminate/config": "~5.0|~6.0|~7.0",
-    "illuminate/support": "~5.0|~6.0|~7.0",
-    "illuminate/database": "~5.0|~6.0|~7.0",
-    "illuminate/queue": "~5.0|~6.0|~7.0",
-    "illuminate/broadcasting": "~5.0|~6.0|~7.0",
-    "illuminate/events": "~5.0|~6.0|~7.0",
-    "illuminate/routing": "~5.0|~6.0|~7.0",
-    "illuminate/auth": "~5.0|~6.0|~7.0",
-    "illuminate/contracts": "~5.0|~6.0|~7.0"
+    "illuminate/http": "~5.0|~6.0|~7.0|~8.0",
+    "illuminate/config": "~5.0|~6.0|~7.0|~8.0",
+    "illuminate/support": "~5.0|~6.0|~7.0|~8.0",
+    "illuminate/database": "~5.0|~6.0|~7.0|~8.0",
+    "illuminate/queue": "~5.0|~6.0|~7.0|~8.0",
+    "illuminate/broadcasting": "~5.0|~6.0|~7.0|~8.0",
+    "illuminate/events": "~5.0|~6.0|~7.0|~8.0",
+    "illuminate/routing": "~5.0|~6.0|~7.0|~8.0",
+    "illuminate/auth": "~5.0|~6.0|~7.0|~8.0",
+    "illuminate/contracts": "~5.0|~6.0|~7.0|~8.0"
   },
   "autoload": {
     "psr-4": {
